# taco

./: Cargo.toml  LICENSE  README.md  inventory.taco.yml  readme.txt
docs/: tasks.md
src/: cluster_info_coordinator_replica.json  cluster_info_leader.json  cluster_info_replica.json  main.rs  output.txt  version.rs
src/clap_parser/: mod.rs
src/cluster_consistency_checker/: cluster_consistency_checker.rs  mod.rs
src/data/: cluster_inf_ocoordinator.json  more_json.json
src/facts_collector/: citus_facts_collector.rs  facts_collector.rs  mod.rs  patroni_checker.rs  patroni_facts_collector.rs  postgres_facts_collector.rs
src/inventory/: cluster.rs  deployment.rs  environment.rs  inventory_manager.rs  mod.rs  server.rs  server_group.rs
src/macro/: macro.txt
src/macro_provider/: macro_provider.rs  mod.rs
src/secrets/: mod.rs  secrets_manager.rs
src/server_provider/: server_provider.rs
src/settings/: settings_manager.rs
src/settings_provider/: mod.rs  settings_provider.rs
src/shared/: active_worker_nodes_result.rs  citus_facts_collector_result.rs  mod.rs  patroni_facts_collector_result.rs  pg_dist_node_info_result.rs  pg_stat_replication_result.rs  pg_stat_wal_receiver_result.rs  request_type.rs
