[package]
name = "taco"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1", "with-chrono-0_4"] }
tokio-native-tls = "0.3.1"
anyhow = "1.0.89"
colored = "2.1.0"
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = { version = "0.9.34-deprecated" }
#serde_json = "1.0"
prettytable-rs = "0.10.0"
rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
rust_decimal_macros = "1.36.0"
postgres_money = { version = "0.4.0", features = ["serde"] }
uuid = "1.10.0"
chrono = "0.4.38"
bytes = "1.7.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"