[package]
name = "taco"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-chrono-0_4"] }
tokio-native-tls = "0.3.1"
colored = "3.0.0"
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9"
#serde_json = "1.0"
prettytable-rs = "0.10.0"
rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
rust_decimal_macros = "1.36.0"
postgres_money = { version = "0.4.1", features = ["serde"] }
uuid = "1.15.1"
chrono = "0.4.40"
bytes = "1.10.1"
anyhow = "1.0.97"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.140"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"