[package]
name = "taco"
version = "0.6.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
colored = "3.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
prettytable-rs = "0.10"
rust_decimal = { version = "1.39", features = ["db-postgres"] }
uuid = "1.18"
chrono = "0.4"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"